Fixed weird message resizing issue that causes text inside to be partially invisible and to scroll.

--- a/pd/nw/css/default.css
+++ b/pd/nw/css/default.css
@@ -328,7 +328,7 @@ mark.console_find_highlighted {
 }
 
 p.msg::after {
-    content: "";
+    /* content: ""; this causes weird scrolling of the text when one adds excess spaces at the end of the text at maximum width */
     height: 100%;
     width: 5px;
     /* background-image: url(../msg-box-flag.svg); */
